Name:		djinn
Version:	2011.7.23
License:	BSD3
License-file:	LICENSE
Author:		Lennart Augustsson
Maintainer:	lennart@augustsson.net
Description:	Djinn uses an theorem prover for intuitionistic propositional logic
		to generate a Haskell expression when given a type.
Category:	source-tools
Homepage:	http://www.augustsson.net/Darcs/Djinn/
Synopsis:	Generate Haskell code from a type
Build-type:	Simple
Build-Depends:	base >= 4 && < 5, mtl, haskeline -any, pretty, array, containers

Executable:     djinn
Main-Is:        Djinn.hs
Hs-Source-Dirs: src
Other-modules:  Help, HCheck,  LJT, HTypes, LJTFormula, REPL

ghc-options:         -O2 -Wall -optl-Wl
--ghc-options:         -Wall -optl-Wl
ghc-prof-options:    -prof -auto-all
