Name:           djinn
Version:        2014.9.7
Synopsis:       Generate Haskell code from a type
Description:    Djinn uses an theorem prover for intuitionistic propositional logic
                to generate a Haskell expression when given a type.
Bug-reports:    https://github.com/haskell/augustss/djinn/issues
License:        BSD3
License-File:   LICENSE
Author:         Lennart Augustsson
Maintainer:     Lennart Augustsson
Copyright:      2014 Lennart Augustsson
Category:       source-tools
Build-type:     Simple
Cabal-Version:  >= 1.8
Stability:      experimental

source-repository head
  type:     git
  location: https://github.com/augustss/djinn

executable djinn
  Main-Is:        Djinn.hs

  Build-Depends:  base >= 4 && < 6, mtl, haskeline -any, pretty, array, containers

  Other-modules:  Help, HCheck,  LJT, HTypes, LJTFormula, REPL

  Hs-Source-Dirs: src
